# slight

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  example.cpp  tests.cpp
include/: slight.h
sqlite3/: README.md
src/: Bind.cpp  Database.cpp  Query.cpp  Result.cpp  Sql.cpp  slight.cpp  stmt_ptr.cpp  utils.h
